fixed title spacing x2

--- a/styles/output.css
+++ b/styles/output.css
@@ -30,7 +30,7 @@
       flex-direction: column;
       width: fit-content;
       position: absolute;
-      right: -1.45vw; }
+      right: -1.44vw; }
       .header-container .header-text-container .header-text .header-title {
         margin-top: 2.4vw;
         margin-bottom: 1.4vw; }
